[workspace]
resolver = "2"
members = [
    "crates/btc-tx-parser",
    "crates/btc-tx-cli",
    "crates/btc-tx-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bitcoin Transaction Visualizer Contributors"]
license = "MIT"
repository = "https://github.com/your-username/btc-tx-visualizer"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
sha2 = "0.10"
ripemd = "0.1"
bs58 = { version = "0.5", features = ["check"] }
bech32 = "0.11"
clap = { version = "4.4", features = ["derive"] }
